日志兼容修改

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #log setting
 #logging.config=logback-spring.xml
-logback.log.level=INFO
+logback.log.level=DEBUG
 #encoding setting
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
@@ -15,7 +15,7 @@ server.tomcat.max-threads=800
 # ES\u53C2\u6570\u914D\u7F6E
 esConfig.clusterName=es-5.6-ip50
 esConfig.nodeName=node-50
-esConfig.serverIp=10.65.2.119
+esConfig.serverIp=10.65.2.118
 esConfig.serverPort=9200
 esConfig.index=driver_service
 esConfig.type=vehicle_condition
